<resources>
    <string name="app_name">LiggeyTool</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your dreaming job is here !</string>
    <string name="nav_header_subtitle">www.liggeytool.sn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_myjobs">My Job offers</string>
    <string name="menu_mycv">My CV</string>
    <string name="menu_share">Share</string>
    <string name="menu_cvtheque">CVTheque</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create a new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>

    <string name="logo">Logo</string>
    <string name="email">ipd@IPD.com</string>
    <string name="marks">Marks</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="home">Home</string>
    <string name="formation">Formation</string>
    <string name="degree">Degree</string>
    <string name="inscription">Inscription</string>
    <string name="university">University</string>

    <string name="error_field">Error field</string>
    <string name="error_parameter">Error parameters</string>
    <string name="error_connection">Connection error </string>
    <string name="help">Help </string>
    <string name="wait">Please Wait </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="level">Level</string>
    <string name="master">Master</string>
    <string name="bachelor">Bachelor</string>
    <string name="olevel">O-Level</string>
    <string name="title_activity_university">IPD sur carte</string>
    <string name="title_registration_form">Inscription</string>
    <string name="title2_registration_form">L\'application pour les recruteurs et chercheurs d\'emploi dans le domaine de l\'agriculture.</string>

    <string name="profil_compte">Profil Compte</string>
    <string name="login_page_ragister">Already Register | Log In Here</string>
    <string name="profil_chercheur">Chercheur d\'emploi</string>
    <string name="profil_recruteur">Recruteur</string>
    <string name="register_page_login">Pas encore inscrit | Inscrivez-vous ici</string>
    <string name="annonces">Annonces</string>
    <string name="title_activity_recruiter">RecruiterActivity</string>
    <string name="title_activity_job_seeker">JobSeekerActivity</string>
    <string name="search">Rechercher</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_owner">Propriété de Riz2ARC. Tous droits réservés.</string>
    <string name="informations_legales">INFORMATIONS LEGALES</string>
    <string name="data_protection">Protections des données personnelles</string>
    <string name="data_content">Contenu et Fonctionnalités</string>
    <string name="app_contact">Contactez-nous au 77 710 12 49 ou envoyez un mail à liggeytool@riz2arc.sn</string>
    <string name="data_contact">contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="user_phone">user_phone</string>
    <string name="user_address">user_address</string>
    <string name="user_age">user_age</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
