<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_myprofile" />
        <item
            android:id="@+id/nav_mycv"
            android:icon="@drawable/icon_list"
            android:title="@string/menu_mycv" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/icon_heartfull"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/icon_help1"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/icon_info2"
                android:title="@string/menu_about" />

        </menu>
    </item>

</menu>
