<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sn.ipd.liggeytool.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sn.ipd.liggeytool.ui.myprofile.MyProfileFragment"
        android:label="@string/menu_myprofile"
        tools:layout="@layout/fragment_myprofile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sn.ipd.liggeytool.ui.myjobs.MyJobsFragment"
        android:label="@string/menu_myjoboffers"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="sn.ipd.liggeytool.ui.mycv.MyCVFragment"
        android:label="@string/menu_mycv"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="sn.ipd.liggeytool.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="sn.ipd.liggeytool.ui.cvtheque.CVThequeFragment"
        android:label="@string/menu_cvtheque"
        tools:layout="@layout/fragment_send" />
</navigation>