<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment"
    android:background="@drawable/bg2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"   >

    <ImageView
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="start"
        android:src="@drawable/logo" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_version" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_owner" />
</LinearLayout>
</LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
          android:text="@string/informations_legales"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/customborder"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_protection"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/data_protection"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_protection"
            android:justificationMode="inter_word"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/customborder"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_content"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/data_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_protection"
            android:justificationMode="inter_word"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_contact"
        android:ellipsize = "marquee"
        android:fadingEdge = "horizontal"
        android:marqueeRepeatLimit = "marquee_forever"
        android:scrollHorizontally = "true"
        android:singleLine = "true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/data_contact" />
</LinearLayout>

</LinearLayout>